GNOME Bugzilla – Bug 706055
gstvaapi jpeg decoder check failed in autogen.sh
Last modified: 2013-08-30 01:43:30 UTC
with some version of libva, JPEG parameters moved from va/va.h to va/va_dec_jpeg.h; configure.ac only include <va/va.h> to check libva JPEG supports. some version failed with checking for JPEG decoding API... no but it has va/va_dec_jpeg.h header file.
Created attachment 251712 [details] [review] 0001-jpeg-fix-compile-miss-on-va_dec_jpeg.h.patch this patch include <va/va_dec_jpeg.h> check, please help review
Created attachment 252695 [details] [review] 0002-jpeg-fix-compile-flags-in-jpeg-check.patch 0002 is based on 0001. After some tests, 0001 is not enough for all platforms, 0002 is a fix based on 0001 to make most platform work on jpeg build
Hi, (In reply to comment #0) > with some version of libva, JPEG parameters moved from va/va.h to > va/va_dec_jpeg.h; configure.ac only include <va/va.h> to check libva JPEG > supports. some version failed with > checking for JPEG decoding API... no > but it has va/va_dec_jpeg.h header file. Please define which version of libva. Testing for <va/va.h> only, and this is what is done already, should be enough for all released versions of libva, down to including 1.0.16.
0.34.0
Hi, (In reply to comment #4) > 0.34.0 That's the API version, please define the libva version. All released versions of libva include <va/va_dec_jpeg.h> from <va/va.h>. So, where does yours come from?
#define PACKAGE_VERSION "1.2.2.pre1" try libva *staging* branch. gst-vaapi should work on both master and staging.
(In reply to comment #6) > #define PACKAGE_VERSION "1.2.2.pre1" > try libva *staging* branch. gst-vaapi should work on both master and staging. Libva staging branch is a development branch and should not be used as is. So, this is a libva issue. I will push the fix there.
new features and fast bug fix are in staging branch. since gst-vaapi works closely with libva, it need to support staging. if you push fix in libva staging, that's ok. all I want is making gst-vaapi work well under QA tests.
Fixed in libva git staging branch. Also squashed and included your patches to gstreamer-vaapi, just in case someone already shipped with invalid VA-API headers.
commit 621d48a5b1d1b51256ef8a6e76b8ee625fd4f7c3 Author: Wind Yuan <feng.yuan@intel.com> Date: Thu Aug 15 17:59:37 2013 +0800 configure: fix detection of VA/JPEG decoding API. Fix detection of VA/JPEG decoding API with non-standard libva packages. More precisely, some packages were shipping with a <va/va.h> header that did not include <va/va_dec_jpeg.h>. https://bugzilla.gnome.org/show_bug.cgi?id=706055
Good to know:)